added post mapping for films